공지사항 샘플 콘텐츠를 추가합니다.

--- a/content/connect/notice/11.md
+++ b/content/connect/notice/11.md
@@ -2,7 +2,7 @@
 title: "[공동보도자료] 토론회 ‘여성들이 죽어 가는데 여가부 폐지가 웬 말인가’ - 신당역 여성살해사건을 통해 바라본 스토킹 처벌법과 정부의 역할(10월 19일(수), 오후 2시 YWCA건물 4층)"
 author: 관리자
 date: 2022-10-14
-image: /img/thumb-2948721989_xfpumhyc_67e351d0aa8c5b71aeb92307d81aca457d27af1b_835x835.jpeg
+image: /images/@content-02.png
 home_sticky: true
 pinned: false
 ---
