--- a/content/connect/notice/3.md
+++ b/content/connect/notice/3.md
@@ -5,7 +5,7 @@ date: 2022-10-18
 summary: "2022년 정의기억연대 <김복동 평화인권상> 공모
 
 (재)일본군성노예제 문제해결을 위한 정의기억연대는 일본군성노예제 피해자로 전시 성폭력 근절과 여성인권•평화를 위해 용기 있게 증언하고 활동한 여성인권 운동가 김복동의 뜻을 기려 김복동평화상을 제정했습니다. 김복동평화상의 일환으로 일본군성노예제 문제해결 및 여성인권과 평화를 위해 활동해 온 활동가들과 관련 문제에 관심을 갖고 활동해 온 미래세대를 응원하기 위해 다음과 같이 <김복동 평화인권상>을 수여하고자 합니다. 많은 분들의 관심과 신청 바랍니다."
-image: /images/@content-02.png
+image: /img/게시판-신설-슬라이더용.png
 home_sticky: true
 pinned: false
 ---
