--- a/content/connect/notice/7.md
+++ b/content/connect/notice/7.md
@@ -1,5 +1,5 @@
 ---
-title: "2022 정의기억연대 후원의 밤에 초대합니다."
+title: "수요시위"
 author: 관리자
 date: 2022-10-27
 summary: "일본군성노예 문제 해결을 위해 달려 온 지 32년이 되었습니다. 그 오랜 세월, 여러분의 소중한 땀과 시간이 일본군성노예제 진실을 밝히는 힘이 되었고 피해생존자들의 우산이 되었습니다. 나비기금이 되어 콩고로 날아갔고, 베를린을 비롯 전 세계 평화의소녀상이 되었습니다. 전시성폭력 근절을 위한 국제 인권규범이 되었습니다. 역사왜곡을 막아내고 수요시위를 지켜내는 연대의 디딤돌이 되었습니다. 미래세대가 올바른 역사를 기억할 수 있도록 기록을 모으고 정리하는 일에 밑거름이 되었습니다. "
