/categories/this-week/ 10대 포스트에 featured image를 지정

--- a/content/actions/post/1556차-수요시위-제10차-세계일본군위안부기림일-세계.md
+++ b/content/actions/post/1556차-수요시위-제10차-세계일본군위안부기림일-세계.md
@@ -5,6 +5,7 @@ categories:
   - "기림사업"
   - "this-week"
   - "report"
+image: https://r2.womenandwar.net/2022/08/크기변환1DSCF6310.jpg
 ---
 
 1556차 일본군성노예제 문제해결을 위한 수요시위는 제10차 일본군‘위안부’기림일 맞에 세계연대집회로 진행되었습니다. 주최는 정의기억연대, 주관은 세계공동주관단체가 함께하였습니다.
