--- a/content/actions/post/1561차-수요시위-평화나비-네트워크.md
+++ b/content/actions/post/1561차-수요시위-평화나비-네트워크.md
@@ -4,6 +4,7 @@ date: "2022-09-14"
 categories: 
   - "this-week"
   - "report"
+image: https://r2.womenandwar.net/2022/09/크기변환1IMG_2577-5.jpg
 ---
 
 1561차 일본군성노예제 문제해결을 위한 수요시위는 평화나비 네트워크 주관으로 진행되었습니다. 사회는 백휘선 학생이 보았습니다.
