--- a/content/actions/post/1562차-수요시위-할머니-삶-김영자-할머니.md
+++ b/content/actions/post/1562차-수요시위-할머니-삶-김영자-할머니.md
@@ -5,6 +5,7 @@ categories:
   - "생존자복지"
   - "this-week"
   - "report"
+image: https://r2.womenandwar.net/2022/09/001-724x1024.jpg
 ---
 
 - ![](https://r2.womenandwar.net/2022/09/001-724x1024.jpg)
