--- a/content/actions/post/1563차-수요시위-한국천주교-여자수도회-장상연합회.md
+++ b/content/actions/post/1563차-수요시위-한국천주교-여자수도회-장상연합회.md
@@ -4,6 +4,7 @@ date: "2022-09-28"
 categories: 
   - "this-week"
   - "report"
+image: https://r2.womenandwar.net/2022/09/크기변환1IMG_3112.jpg
 ---
 
 1563차 일본군성노예제 문제해결을 위한 수요시위는 한국천주교 여자수도회 장상연합회, 마리아의 전교자 프란치스코수녀회 주관으로 진행되었습니다. 사회는 이경화 리디아(마리아의 전교자 프란치스코 수녀회) 수녀님이 보았습니다.
