--- a/content/actions/post/1565차-수요시위-부천시민연합.md
+++ b/content/actions/post/1565차-수요시위-부천시민연합.md
@@ -1,6 +1,7 @@
 ---
 title: "1565차 수요시위 – 부천시민연합"
 date: "2022-10-12"
+image: https://r2.womenandwar.net/2022/10/IMG_3541-1024x683.jpg
 categories: 
   - "this-week"
   - "report"
