--- a/content/actions/post/1557차-수요시위-서울-평화나비-네트워크.md
+++ b/content/actions/post/1557차-수요시위-서울-평화나비-네트워크.md
@@ -4,6 +4,7 @@ date: "2022-08-17"
 categories: 
   - "this-week"
   - "report"
+image: https://r2.womenandwar.net/2022/08/크기변환1IMG_1012.jpg
 ---
 
 1557차 일본군성노예제 문제해결을 위한 수요시위는 서울 평화나비 네트워크 주관으로 진행되었습니다. 사회는 평화나비 네트워크 한국외국어대학교 지부 신채연 대표님이 보았습니다.
