--- a/content/actions/post/1558차-수요시위-한일화해와평화플랫폼.md
+++ b/content/actions/post/1558차-수요시위-한일화해와평화플랫폼.md
@@ -4,6 +4,7 @@ date: "2022-08-24"
 categories: 
   - "this-week"
   - "report"
+image : https://r2.womenandwar.net/2022/08/크기변환1IMG_1423.jpg
 ---
 
 1558차 일본군성노예제 문제해결을 위한 수요시위는 한일화해와평화플랫폼 주관으로 진행되었습니다.
