--- a/content/actions/post/1559차-수요시위-진보대학생넷.md
+++ b/content/actions/post/1559차-수요시위-진보대학생넷.md
@@ -4,6 +4,7 @@ date: "2022-08-31"
 categories: 
   - "this-week"
   - "report"
+image: https://r2.womenandwar.net/2022/08/크기변환1IMG_2198.jpg
 ---
 
 1559차 일본군성노예제 문제해결을 위한 수요시위는 진보대학생넷 주관으로 진행되었습니다. 사회는 최휘주 진보대학생넷 서울인천지부 대표님이 보았습니다.
