--- a/content/actions/post/1560차-수요시위-성매매처벌법개정연대-성매매여성-처.md
+++ b/content/actions/post/1560차-수요시위-성매매처벌법개정연대-성매매여성-처.md
@@ -4,6 +4,7 @@ date: "2022-09-07"
 categories: 
   - "this-week"
   - "report"
+image: https://r2.womenandwar.net/2022/09/크기변환1IMG_2389.jpg
 ---
 
 1560차 일본군성노예제 문제해결을 위한 수요시위는 성매매처벌법개정연대: 성매매여성 처벌조항 삭제, 성매매 수요차단 공동행동 주관으로 진행되었습니다. 사회는 여성인권센터 보다 조서희 활동가님이 보았습니다.
