--- a/content/actions/post/1562차-수요시위-한국기독교교회협의회-여성위원회.md
+++ b/content/actions/post/1562차-수요시위-한국기독교교회협의회-여성위원회.md
@@ -4,6 +4,7 @@ date: "2022-09-21"
 categories: 
   - "this-week"
   - "report"
+image: https://r2.womenandwar.net/2022/09/크기변환1IMG_2953.jpg
 ---
 
 1562차 일본군성노예제 문제해결을 위한 수요시위는 한국기독교교회협의회 여성위원회 주관으로 진행되었습니다. 사회는 교회협 여성위 부위원장 최은영 목사님이 보았습니다.
