--- a/content/actions/post/1564차-수요시위-대한불교조계종-사회노동위원회.md
+++ b/content/actions/post/1564차-수요시위-대한불교조계종-사회노동위원회.md
@@ -4,8 +4,7 @@ date: "2022-10-05"
 categories: 
   - "this-week"
   - "report"
-components:
-  - https://r2.womenandwar.net/2022/10/크기변환1IMG_3321-1024x683.jpg
+image: https://r2.womenandwar.net/2022/10/크기변환1IMG_3321-1024x683.jpg
 ---
 
 1564차 일본군성노예제 문제해결을 위한 수요시위는 대한불교조계종 사회노동위원회 주관으로 진행되었습니다. 사회는 조계종 사회노동위원회 이권수 사무국장님이 보았습니다.
