--- a/content/actions/post/1566차-수요시위-한국여성단체연합.md
+++ b/content/actions/post/1566차-수요시위-한국여성단체연합.md
@@ -3,8 +3,7 @@ title: "1566차 수요시위 – 한국여성단체연합"
 date: "2022-10-19"
 categories: 
   - "this-week"
-components:
-  - https://r2.womenandwar.net/2022/10/IMG_3925-1024x683.jpg
+image: https://womenandwar.net/kr/wp-content/uploads/2022/10/IMG_3819-1024x683.jpg
 ---
 
 1566차 일본군성노예제 문제해결을 위한 수요시위는 한국여성단체연합 주관으로 진행되었습니다. 사회는 한국여성단체연합 최은주 활동가가 보았습니다.
@@ -68,3 +67,4 @@ components:
 - ![](https://r2.womenandwar.net/2022/10/IMG_3952-1024x683.jpg)
     
 - ![](https://r2.womenandwar.net/2022/10/IMG_3939-683x1024.jpg)
+    
