활동 글 목록에 썸네일이 없을 때 나비문양을 띄워봅니다.

--- a/content/actions/post/9월-포항-박필근-할머니-방문기.md
+++ b/content/actions/post/9월-포항-박필근-할머니-방문기.md
@@ -3,6 +3,7 @@ title: "9월 포항 박필근 할머니 방문기"
 date: "2022-09-22"
 categories: 
   - "생존자복지"
+image: https://r2.womenandwar.net/2022/09/photo_2022-09-26_18-03-53-edited.jpg
 ---
 
 차 문을 열고 익숙한 마당에 발을 디뎠습니다. 평상 옆으로 할머니의 분주한 뒷모습이 보였습니다.
