--- a/content/actions/post/할머니-풍성한-한가위-맞으시길-바랍니다.md
+++ b/content/actions/post/할머니-풍성한-한가위-맞으시길-바랍니다.md
@@ -4,6 +4,7 @@ date: "2022-09-08"
 categories: 
   - "생존자복지"
   - "report"
+image: https://r2.womenandwar.net/2022/09/사본-꾸미기20220906_091947-1024x607.jpg
 ---
 
 2022년 한가위를 맞아 할머니들께 선물을 보내 드렸습니다. 할머니들께 보내는 추석 명절 서한과 함께 한우세트, 굴비, 사과, 배, 꿀 등 할머니들이 각자 좋아하시는 것, 그리고 건강상태에 따라 알맞은 선물들을 보내 드렸습니다. 전화해서 명절 잘 보내시라고 인사도 드렸습니다.
