#11 살림살이 md content asset path update to r2

--- a/content/about/budget/1318.md
+++ b/content/about/budget/1318.md
@@ -3,4 +3,4 @@ title: "2020년 재무제표 및 공인법인 결산서류 등의 공시"
 date: "2021-04-16"
 ---
 
-법인의 결산 제무제표를 게재한 후 2021.4.30. 공인법인 결산서류 등의 공시를 홈텍스에 제출하여 제무제표 뒤에 그 내용을 추가하였습니다. n![](/kr/wp-content/uploads/kboard_attached/3/202104/607929c30a2767148441.jpg)n![](/kr/wp-content/uploads/kboard_attached/3/202104/607929cf47dc78140841.jpg)n![](/kr/wp-content/uploads/kboard_attached/3/202104/607929cf2e7475496993.jpg)n![](/kr/wp-content/uploads/kboard_attached/3/202104/608bb621e0b8a9990264.jpg) n![](/kr/wp-content/uploads/kboard_attached/3/202104/608bb6220288e9997523.jpg)n![](/kr/wp-content/uploads/kboard_attached/3/202104/608bb62207c307055680.jpg)n![](/kr/wp-content/uploads/kboard_attached/3/202104/608bb6220bbc38472488.jpg) n![](/kr/wp-content/uploads/kboard_attached/3/202104/608bb6220f7a96992474.jpg) n![](/kr/wp-content/uploads/kboard_attached/3/202104/608bb62212f186716754.jpg) n![](/kr/wp-content/uploads/kboard_attached/3/202104/608bb6221658c1207682.jpg) n![](/kr/wp-content/uploads/kboard_attached/3/202104/608bb622199b52624148.jpg) n![](/kr/wp-content/uploads/kboard_attached/3/202104/608bb6221cf705302878.jpg) n![](/kr/wp-content/uploads/kboard_attached/3/202104/608bb6221ff2c1650733.jpg) n![](/kr/wp-content/uploads/kboard_attached/3/202104/608bb622237ce4458440.jpg) n![](/kr/wp-content/uploads/kboard_attached/3/202104/608bb6222730a5465861.jpg) n![](/kr/wp-content/uploads/kboard_attached/3/202104/608bb6222ab548979290.jpg) n![](/kr/wp-content/uploads/kboard_attached/3/202104/608bb6222e12c6880219.jpg) n![](/kr/wp-content/uploads/kboard_attached/3/202104/608bb622315f46240511.jpg) n![](/kr/wp-content/uploads/kboard_attached/3/202104/608bb622351d37745712.jpg) n![](/kr/wp-content/uploads/kboard_attached/3/202104/608bb6223a5684835846.jpg) n![](/kr/wp-content/uploads/kboard_attached/3/202104/608bb6223ddec6513845.jpg) n![](/kr/wp-content/uploads/kboard_attached/3/202104/608bb622414a26875099.jpg) n![](/kr/wp-content/uploads/kboard_attached/3/202104/608bb62244a0e9284565.jpg)
+법인의 결산 제무제표를 게재한 후 2021.4.30. 공인법인 결산서류 등의 공시를 홈텍스에 제출하여 제무제표 뒤에 그 내용을 추가하였습니다. n![](https://r2.womenandwar.net/kboard_attached/3/202104/607929c30a2767148441.jpg)n![](https://r2.womenandwar.net/kboard_attached/3/202104/607929cf47dc78140841.jpg)n![](https://r2.womenandwar.net/kboard_attached/3/202104/607929cf2e7475496993.jpg)n![](https://r2.womenandwar.net/kboard_attached/3/202104/608bb621e0b8a9990264.jpg) n![](https://r2.womenandwar.net/kboard_attached/3/202104/608bb6220288e9997523.jpg)n![](https://r2.womenandwar.net/kboard_attached/3/202104/608bb62207c307055680.jpg)n![](https://r2.womenandwar.net/kboard_attached/3/202104/608bb6220bbc38472488.jpg) n![](https://r2.womenandwar.net/kboard_attached/3/202104/608bb6220f7a96992474.jpg) n![](https://r2.womenandwar.net/kboard_attached/3/202104/608bb62212f186716754.jpg) n![](https://r2.womenandwar.net/kboard_attached/3/202104/608bb6221658c1207682.jpg) n![](https://r2.womenandwar.net/kboard_attached/3/202104/608bb622199b52624148.jpg) n![](https://r2.womenandwar.net/kboard_attached/3/202104/608bb6221cf705302878.jpg) n![](https://r2.womenandwar.net/kboard_attached/3/202104/608bb6221ff2c1650733.jpg) n![](https://r2.womenandwar.net/kboard_attached/3/202104/608bb622237ce4458440.jpg) n![](https://r2.womenandwar.net/kboard_attached/3/202104/608bb6222730a5465861.jpg) n![](https://r2.womenandwar.net/kboard_attached/3/202104/608bb6222ab548979290.jpg) n![](https://r2.womenandwar.net/kboard_attached/3/202104/608bb6222e12c6880219.jpg) n![](https://r2.womenandwar.net/kboard_attached/3/202104/608bb622315f46240511.jpg) n![](https://r2.womenandwar.net/kboard_attached/3/202104/608bb622351d37745712.jpg) n![](https://r2.womenandwar.net/kboard_attached/3/202104/608bb6223a5684835846.jpg) n![](https://r2.womenandwar.net/kboard_attached/3/202104/608bb6223ddec6513845.jpg) n![](https://r2.womenandwar.net/kboard_attached/3/202104/608bb622414a26875099.jpg) n![](https://r2.womenandwar.net/kboard_attached/3/202104/608bb62244a0e9284565.jpg)
