--- a/content/about/budget/267.md
+++ b/content/about/budget/267.md
@@ -3,4 +3,4 @@ title: "2016년 연간 기부금 모금액 및 활용실적 명세서"
 date: "2019-03-19"
 ---
 
-\* 홈페이지 개편됨에 따라 이전하여 게시하였습니다. (2019.3.19)n\* 국세청 재공시(2020.8.29)에 따라 변경되었습니다. nn ![](/kr/wp-content/uploads/kboard_attached/3/202010/5f84195751fbe9481471.jpg) ![](/kr/wp-content/uploads/kboard_attached/3/202010/5f84195753d8c5679930.jpg)
+\* 홈페이지 개편됨에 따라 이전하여 게시하였습니다. (2019.3.19)n\* 국세청 재공시(2020.8.29)에 따라 변경되었습니다. nn ![](https://r2.womenandwar.net/kboard_attached/3/202010/5f84195751fbe9481471.jpg) ![](https://r2.womenandwar.net/kboard_attached/3/202010/5f84195753d8c5679930.jpg)
