--- a/content/about/budget/281.md
+++ b/content/about/budget/281.md
@@ -3,4 +3,4 @@ title: "2017년 기부금품 모집완료 보고서"
 date: "2019-03-19"
 ---
 
-2017년 기부금품 모집완료 보고서n ![](/kr/wp-content/uploads/kboard_attached/3/201903/5c90acca9df996316067.png) ![](/kr/wp-content/uploads/kboard_attached/3/201903/5c90acce7de4c4171521.png)
+2017년 기부금품 모집완료 보고서n ![](https://r2.womenandwar.net/kboard_attached/3/201903/5c90acca9df996316067.png) ![](https://r2.womenandwar.net/kboard_attached/3/201903/5c90acce7de4c4171521.png)
