--- a/content/about/budget/282.md
+++ b/content/about/budget/282.md
@@ -3,4 +3,4 @@ title: "2017년 결산 재무제표"
 date: "2019-03-19"
 ---
 
-2017년 결산 재무제표n ![](/kr/wp-content/uploads/kboard_attached/3/201903/5c90ad80a79b29514794.jpg) ![](/kr/wp-content/uploads/kboard_attached/3/201903/5c90ad8e2e2c74587410.jpg) ![](/kr/wp-content/uploads/kboard_attached/3/201903/5c90ad954784f9521095.jpg)
+2017년 결산 재무제표n ![](https://r2.womenandwar.net/kboard_attached/3/201903/5c90ad80a79b29514794.jpg) ![](https://r2.womenandwar.net/kboard_attached/3/201903/5c90ad8e2e2c74587410.jpg) ![](https://r2.womenandwar.net/kboard_attached/3/201903/5c90ad954784f9521095.jpg)
