--- a/content/about/budget/619.md
+++ b/content/about/budget/619.md
@@ -3,4 +3,4 @@ title: "2020년 기부금품 모집 등록증"
 date: "2020-02-26"
 ---
 
-「기부금품의 모집 및 사용에 관한 법률」제4조의 규정에 의하여 2020년 기부금품 모집등록을 하였습니다. n![](/kr/wp-content/uploads/kboard_attached/3/202002/5e56437eec6a35219801.jpg)
+「기부금품의 모집 및 사용에 관한 법률」제4조의 규정에 의하여 2020년 기부금품 모집등록을 하였습니다. n![](https://r2.womenandwar.net/kboard_attached/3/202002/5e56437eec6a35219801.jpg)
