--- a/content/about/budget/543.md
+++ b/content/about/budget/543.md
@@ -3,4 +3,4 @@ title: "2019년도 기부금품 모집 종료"
 date: "2020-01-06"
 ---
 
-안녕하세요. n2019년 한 해 일본군성노예제 문제의 정의로운 해결을 위해, 피해자의 명예와 인권회복을 위해 후원해 주심 모든분들께 진심으로 감사드립니다. n2019년 1월 18일부터 12월 31일까지 기부금품 모집이 완료되었습니다. n![](/kr/wp-content/uploads/kboard_attached/3/202001/5e14124c01c056703694.jpg)
+안녕하세요. n2019년 한 해 일본군성노예제 문제의 정의로운 해결을 위해, 피해자의 명예와 인권회복을 위해 후원해 주심 모든분들께 진심으로 감사드립니다. n2019년 1월 18일부터 12월 31일까지 기부금품 모집이 완료되었습니다. n![](https://r2.womenandwar.net/kboard_attached/3/202001/5e14124c01c056703694.jpg)
