--- a/content/about/budget/1552.md
+++ b/content/about/budget/1552.md
@@ -1,6 +1,7 @@
 ---
-title: "2021년 기부금품의 모집 및 지출 명세서"
-date: "2022-05-02"
+title: 2021년 기부금품의 모집 및 지출 명세서
+author: 정의기억연대
+date: 2022-05-02
 ---
 
 ![](https://r2.womenandwar.net/kboard_attached/3/202205/626f64d04487d3575257.jpg) n![](https://r2.womenandwar.net/kboard_attached/3/202205/626f64d0567df6655436.jpg)n공익법인 결산공시 확인 안내.n국세청 홈택스 > 첫화면 오른쪽 하단 세금종류별 서비스의 공익법인결산서류 > 공익법인 결산서류 등 공시 목록 > 공익법인명 입력 후 확인
