Update 메인 슬라이드 “1”

--- a/content/slides/1.md
+++ b/content/slides/1.md
@@ -2,9 +2,9 @@
 weight: "1"
 upper_message: 활동보고
 title: 1563차 수요시위
-sub_title: "매주 수요일 낮 12시 정각에 주한 일본대사관 앞 “평화로”에서 열립니다."
+sub_title: 매주 수요일 낮 12시 정각에 주한 일본대사관 앞 “평화로”에서 열립니다.
 date: 2022-03-10T02:52:56.532Z
-image: https://r2.womenandwar.net/2022/09/%ED%81%AC%EA%B8%B0%EB%B3%80%ED%99%981IMG_3141.jpg
+image: https://media.womenandwar.net/22/1027/정의연-슬라이드-001.jpg
 button_name: 최근 수요시위 내용 보러가기
 button_url: https://womenandwarmuseum.net/connect/notice/%EC%A0%84%EC%9F%81%EA%B3%BC%EC%97%AC%EC%84%B1%EC%9D%B8%EA%B6%8C%EB%B0%95%EB%AC%BC%EA%B4%80-%EC%9E%90%EC%9B%90%ED%99%9C%EB%8F%99%EA%B0%80-%EB%AA%A8%EC%A7%91-%EB%8C%80%EB%A9%B4-%EB%B9%84%EB%8C%80%EB%A9%B4/
 ---
