--- a/content/actions/post/2023-02-08-1582차-수요시위-사한국성폭력상담소.md
+++ b/content/actions/post/2023-02-08-1582차-수요시위-사한국성폭력상담소.md
@@ -1,9 +1,11 @@
 ---
-title: "1582차 수요시위-(사)한국성폭력상담소"
-date: "2023-02-08"
-categories: 
-  - "this-week"
-  - "report"
+title: 1582차 수요시위-(사)한국성폭력상담소
+author: 정의기억연대
+date: 2023-02-08
+image: https://womenandwar.net/kr/wp-content/uploads/2023/02/크기변환1IMG_9085-1.jpg
+categories:
+  - this-week
+  - report
 ---
 
 1582차 일본군성노예제 문제해결을 위한 수요시위는 (사)한국성폭력상담소 주관으로 진행되었습니다. 사회는 한국성폭력상담소 인턴 유정 님이 보았습니다.
