--- a/content/actions/post/2023-02-01-1581차-수요시위-경기평화나비-경기청소년평화나비.md
+++ b/content/actions/post/2023-02-01-1581차-수요시위-경기평화나비-경기청소년평화나비.md
@@ -1,9 +1,11 @@
 ---
-title: "1581차 수요시위 - 경기평화나비, 경기청소년평화나비"
-date: "2023-02-01"
-categories: 
-  - "this-week"
-  - "report"
+title: 1581차 수요시위 - 경기평화나비, 경기청소년평화나비
+author: 정의기억연대
+date: 2023-02-01
+image: https://womenandwar.net/kr/wp-content/uploads/2023/02/크기변환1IMG_8953.jpg
+categories:
+  - this-week
+  - report
 ---
 
 1581차 일본군성노예제 문제해결을 위한 수요시위는 경기평화나비, 경기청소년평화나비 주관으로 진행되었습니다. 사회는 백건하 경기평화나비 대표님과 김한비 경기청소년평화나비 대표님이 보았습니다.
