기호를 치환합니다.

--- a/content/connect/notice/1236.md
+++ b/content/connect/notice/1236.md
@@ -2,7 +2,7 @@
   id: 1236
   uid: 2
   author_name: "정의기억연대"
-  title: "[자료집] 2차 토론회 &lt; 일본국 상대 일본군‘위안부’ 손해배상청구 승소판결, 그 의미와 향후 대응 방향 &gt; 안내"
+  title: "[자료집] 2차 토론회 < 일본국 상대 일본군‘위안부’ 손해배상청구 승소판결, 그 의미와 향후 대응 방향 > 안내"
   created: "2021-01-21 15:21:39"
   updated: "2021-01-28 17:20:25"
   image: "https://r2.womenandwar.net/kboard_attached/1/202101/60091d3bac0ba2709805.jpg"
