--- a/content/connect/notice/1282.md
+++ b/content/connect/notice/1282.md
@@ -2,7 +2,7 @@
   id: 1282
   uid: 2
   author_name: "정의기억연대"
-  title: "긴급토론회 &lt;램지어 교수 ‘사태’를 통해 본 아카데미 역사부정론&gt;"
+  title: "긴급토론회 <램지어 교수 ‘사태’를 통해 본 아카데미 역사부정론>"
   created: "2021-03-03 18:30:55"
   updated: "2021-03-19 17:47:05"
   image: "https://r2.womenandwar.net/kboard_attached/1/202103/604abce7761909108549.png"
