--- a/content/connect/notice/1370.md
+++ b/content/connect/notice/1370.md
@@ -2,7 +2,7 @@
   id: 1370
   uid: 2
   author_name: "정의기억연대"
-  title: "[~6/30] 1500차 수요시위 기념 &lt;나와 수요시위&gt; 에세이 공모전 공고 1500th Wednesday Demonstration Essay Contest 第1500回水曜デモ記念＜私と水曜デモ＞エッセイ公募"
+  title: "[~6/30] 1500차 수요시위 기념 <나와 수요시위> 에세이 공모전 공고 1500th Wednesday Demonstration Essay Contest 第1500回水曜デモ記念＜私と水曜デモ＞エッセイ公募"
   created: "2021-05-28 13:45:36"
   updated: "2021-07-16 16:44:23"
   attachments: 
