--- a/content/connect/notice/1452.md
+++ b/content/connect/notice/1452.md
@@ -2,7 +2,7 @@
   id: 1452
   uid: 2
   author_name: "정의기억연대"
-  title: "[~11/7] 2022년 정의기억연대 &lt;김복동 연구지원 사업&gt; 공모"
+  title: "[~11/7] 2022년 정의기억연대 <김복동 연구지원 사업> 공모"
   created: "2021-10-07 19:23:10"
   updated: "2021-12-16 14:58:01"
   image: "https://r2.womenandwar.net/kboard_attached/1/202110/61677b9e3bbc01700656.png"
