--- a/content/connect/notice/1462.md
+++ b/content/connect/notice/1462.md
@@ -2,7 +2,7 @@
   id: 1462
   uid: 2
   author_name: "정의기억연대"
-  title: "&lt;김복동 평화인권상&gt; 수상자 선정 공고"
+  title: "<김복동 평화인권상> 수상자 선정 공고"
   created: "2021-11-05 18:21:33"
   updated: "2021-11-18 14:40:22"
 ---
