--- a/content/connect/notice/1475.md
+++ b/content/connect/notice/1475.md
@@ -2,7 +2,7 @@
   id: 1475
   uid: 2
   author_name: "정의기억연대"
-  title: "&lt;김복동 연구지원 사업&gt; 선정 공고"
+  title: "<김복동 연구지원 사업> 선정 공고"
   created: "2021-12-16 14:48:51"
   updated: "2021-12-16 14:49:08"
 ---
