--- a/content/connect/notice/1670.md
+++ b/content/connect/notice/1670.md
@@ -2,7 +2,7 @@
   id: 1670
   uid: 2
   author_name: "정의기억연대"
-  title: "[~10/31마감] 2022년 정의기억연대 &lt;김복동 평화인권상&gt; 공모"
+  title: "[~10/31마감] 2022년 정의기억연대 <김복동 평화인권상> 공모"
   created: "2022-10-18 13:13:45"
   updated: "2022-11-14 09:25:32"
   image: "https://r2.womenandwar.net/kboard_thumbnails/1/202210/634e286f55b972503442.png"
