--- a/content/connect/notice/84.md
+++ b/content/connect/notice/84.md
@@ -2,7 +2,7 @@
   id: 84
   uid: 3
   author_name: "정의기억연대"
-  title: "정대협 28주년 기념 심포지엄 &lt;북측 생존자들의 기억과 증언, 그리고 문제해결을 위한 남북연대&gt;"
+  title: "정대협 28주년 기념 심포지엄 <북측 생존자들의 기억과 증언, 그리고 문제해결을 위한 남북연대>"
   created: "2018-10-12 11:21:20"
   updated: "2018-10-12 19:29:42"
   image: "https://r2.womenandwar.net/kboard_attached/1/201810/5bc074999b18d4289497.jpg"
