--- a/content/connect/press-release/12.md
+++ b/content/connect/press-release/12.md
@@ -2,7 +2,7 @@
   id: 12
   uid: 2
   author_name: "정의기억연대"
-  title: "일본군‘위안부’피해자 관련 국내 6개 지역 순회 전시&lt;진실과 정의 그리고 기억&gt; 개최"
+  title: "일본군‘위안부’피해자 관련 국내 6개 지역 순회 전시<진실과 정의 그리고 기억> 개최"
   created: "2018-08-30 16:14:45"
   updated: "2018-08-30 16:26:41"
   attachments: 
