--- a/content/connect/press-release/1251.md
+++ b/content/connect/press-release/1251.md
@@ -2,7 +2,7 @@
   id: 1251
   uid: 2
   author_name: "정의기억연대"
-  title: "[보도자료] 정의기억연대, 3일 수요시위에서 &lt;성찰과비전위원회&gt; 활동결과 발표 예정"
+  title: "[보도자료] 정의기억연대, 3일 수요시위에서 <성찰과비전위원회> 활동결과 발표 예정"
   created: "2021-01-31 11:46:26"
   updated: "2021-01-31 11:46:26"
 ---
