--- a/content/connect/press-release/1253.md
+++ b/content/connect/press-release/1253.md
@@ -2,7 +2,7 @@
   id: 1253
   uid: 2
   author_name: "정의기억연대"
-  title: "[보도자료] &lt;성찰과비전위원회&gt;활동결과보고와 새 이사회 명단발표"
+  title: "[보도자료] <성찰과비전위원회>활동결과보고와 새 이사회 명단발표"
   created: "2021-02-03 12:20:37"
   updated: "2021-03-19 17:48:49"
   image: "https://r2.womenandwar.net/kboard_attached/1/202102/601a1621259b81339051.png"
