--- a/content/connect/press-release/1270.md
+++ b/content/connect/press-release/1270.md
@@ -2,7 +2,7 @@
   id: 1270
   uid: 2
   author_name: "정의기억연대"
-  title: "[보도자료] 정의기억연대, 26일 3차 국제심포지엄  &lt;일본국 상대 일본군‘위안부’ 손해배상청구 역사적 승소: 정의와 진실에 대한 권리회복&gt; 개최"
+  title: "[보도자료] 정의기억연대, 26일 3차 국제심포지엄  <일본국 상대 일본군‘위안부’ 손해배상청구 역사적 승소: 정의와 진실에 대한 권리회복> 개최"
   created: "2021-02-21 10:41:26"
   updated: "2021-03-19 17:47:55"
   image: "https://r2.womenandwar.net/kboard_attached/1/202102/6031ba275a1cb2074321.jpg"
