--- a/content/connect/press-release/1360.md
+++ b/content/connect/press-release/1360.md
@@ -2,7 +2,7 @@
   id: 1360
   uid: 2
   author_name: "정의기억연대"
-  title: "정의기억연대, 5월 14일(금) 오후 3시 4월 21일 2차 일본국 상대 손해배상청구소송 각하 판결에 대한 2차 토론회  &lt;일본군‘위안부’ 피해자 청구 각하 판결, 어떻게 볼 것인가?: 다양한 쟁점을 중심으로&gt; 개최!"
+  title: "정의기억연대, 5월 14일(금) 오후 3시 4월 21일 2차 일본국 상대 손해배상청구소송 각하 판결에 대한 2차 토론회  <일본군‘위안부’ 피해자 청구 각하 판결, 어떻게 볼 것인가?: 다양한 쟁점을 중심으로> 개최!"
   created: "2021-05-10 19:04:30"
   updated: "2021-05-21 09:19:52"
   image: "https://r2.womenandwar.net/kboard_attached/1/202105/609906a6ee6c28577624.jpg"
