--- a/content/connect/press-release/149.md
+++ b/content/connect/press-release/149.md
@@ -2,7 +2,7 @@
   id: 149
   uid: 2
   author_name: "정의기억연대"
-  title: "일본군'위안부'연구회 &lt;일본군'위안부'문제연구소 소장의 사퇴에 대한 성명서&gt;"
+  title: "일본군'위안부'연구회 <일본군'위안부'문제연구소 소장의 사퇴에 대한 성명서>"
   created: "2018-12-13 10:44:01"
   updated: "2018-12-13 17:41:46"
 ---
