--- a/content/connect/press-release/1511.md
+++ b/content/connect/press-release/1511.md
@@ -2,7 +2,7 @@
   id: 1511
   uid: 2
   author_name: "정의기억연대"
-  title: "정의기억연대, 3월 4일 나비기금 10주년 기념 라운드테이블 &lt;나비기금 10년, 세계 전시성폭력 피해자의 희망으로 다시 한 번 날다!&gt;개최"
+  title: "정의기억연대, 3월 4일 나비기금 10주년 기념 라운드테이블 <나비기금 10년, 세계 전시성폭력 피해자의 희망으로 다시 한 번 날다!>개최"
   created: "2022-02-25 13:23:05"
   updated: "2022-02-25 13:23:05"
   attachments: 
