--- a/content/connect/press-release/16.md
+++ b/content/connect/press-release/16.md
@@ -2,7 +2,7 @@
   id: 16
   uid: 2
   author_name: "정의기억연대"
-  title: "8.14 세계 일본군‘위안부’피해자 기림일 국회 특별전 &lt;수요일 12시&gt; 개최"
+  title: "8.14 세계 일본군‘위안부’피해자 기림일 국회 특별전 <수요일 12시> 개최"
   created: "2018-08-30 16:27:56"
   updated: "2018-08-30 16:27:56"
   attachments: 
