--- a/content/connect/press-release/41.md
+++ b/content/connect/press-release/41.md
@@ -2,7 +2,7 @@
   id: 41
   uid: 2
   author_name: "정의기억연대"
-  title: "정의기억연대, &lt;진실과 정의 그리고 기억&gt; 개최 등 미국 캠페인 진행"
+  title: "정의기억연대, <진실과 정의 그리고 기억> 개최 등 미국 캠페인 진행"
   created: "2018-09-07 18:34:49"
   updated: "2018-10-11 18:10:18"
   attachments: 
