--- a/content/connect/press-release/460.md
+++ b/content/connect/press-release/460.md
@@ -2,7 +2,7 @@
   id: 460
   uid: 2
   author_name: "정의기억연대"
-  title: "정의기억연대, 9월 10일부터 보름 간 제42차 유엔 인권이사회 대응 및  영화 &lt;김복동&gt; 미주 순회상영회 개최 등 해외 캠페인 진행 예정"
+  title: "정의기억연대, 9월 10일부터 보름 간 제42차 유엔 인권이사회 대응 및  영화 <김복동> 미주 순회상영회 개최 등 해외 캠페인 진행 예정"
   created: "2019-09-09 10:31:56"
   updated: "2020-01-28 16:06:51"
   image: "https://r2.womenandwar.net/kboard_attached/1/201909/5d75acb57ba989041962.png"
