--- a/content/connect/press-release/542.md
+++ b/content/connect/press-release/542.md
@@ -2,7 +2,7 @@
   id: 542
   uid: 2
   author_name: "정의기억연대"
-  title: "[보도자료]북측 &lt;조선일본군성노예 및 강제련행피해자문제대책위원회(조대위)&gt;, 정의연에 새해인사 전달"
+  title: "[보도자료]북측 <조선일본군성노예 및 강제련행피해자문제대책위원회(조대위)>, 정의연에 새해인사 전달"
   created: "2020-01-06 13:28:22"
   updated: "2020-01-06 13:29:46"
   image: "https://r2.womenandwar.net/kboard_attached/1/202001/5e12b7062e9646033936.jpg"
