--- a/content/connect/press-release/623.md
+++ b/content/connect/press-release/623.md
@@ -2,7 +2,7 @@
   id: 623
   uid: 2
   author_name: "정의기억연대"
-  title: "정의연 2020년 1차이사회《6.19 세계코리안여성활동가네트워크 회의와 교사워크숍 개최》, 《11.25 미국&lt;김복동센터&gt;개소 추진》등 주요사업 결정"
+  title: "정의연 2020년 1차이사회《6.19 세계코리안여성활동가네트워크 회의와 교사워크숍 개최》, 《11.25 미국<김복동센터>개소 추진》등 주요사업 결정"
   created: "2020-02-28 14:51:15"
   updated: "2020-02-28 14:54:55"
   attachments: 
