--- a/content/connect/resource/361.md
+++ b/content/connect/resource/361.md
@@ -3,7 +3,7 @@
   category: "문서"
   uid: 2
   author_name: "정의기억연대"
-  title: "[자료집] 2019 세계 전시성폭력 추방의 날 교사워크숍 &lt;미래세대로의 계승, 일본군성노예제 문제는 어떻게 교육되고 있는가?&gt;"
+  title: "[자료집] 2019 세계 전시성폭력 추방의 날 교사워크숍 <미래세대로의 계승, 일본군성노예제 문제는 어떻게 교육되고 있는가?>"
   created: "2019-06-24 11:55:09"
   updated: "2019-07-25 16:02:24"
   attachments: 
