--- a/content/connect/resource/362.md
+++ b/content/connect/resource/362.md
@@ -3,7 +3,7 @@
   category: "문서"
   uid: 2
   author_name: "정의기억연대"
-  title: "[자료집] 2019 세계 전시성폭력 추방의 날 국제심포지엄 &lt;끝나지 않는 고통, 전시성폭력 범죄의 재발방지를 위하여&gt;"
+  title: "[자료집] 2019 세계 전시성폭력 추방의 날 국제심포지엄 <끝나지 않는 고통, 전시성폭력 범죄의 재발방지를 위하여>"
   created: "2019-06-24 17:16:23"
   updated: "2019-07-25 16:02:10"
   attachments: 
