--- a/content/connect/notice/1026.md
+++ b/content/connect/notice/1026.md
@@ -2,7 +2,7 @@
   id: 1026
   uid: 2
   author_name: "정의기억연대"
-  title: "&lt;평화의우리집 고 손영미 소장님 가시는 길에 함께해주신 분들께 진심으로 감사드립니다&gt;"
+  title: "<평화의우리집 고 손영미 소장님 가시는 길에 함께해주신 분들께 진심으로 감사드립니다>"
   created: "2020-06-11 15:55:41"
   updated: "2020-10-12 16:07:06"
   image: "https://r2.womenandwar.net/kboard_attached/1/202006/5ee1d55b41f8d9543245.jpg"
