--- a/content/connect/notice/1161.md
+++ b/content/connect/notice/1161.md
@@ -2,7 +2,7 @@
   id: 1161
   uid: 2
   author_name: "정의기억연대"
-  title: "피해생존자들의 쉼터였던 &lt;평화의 우리집&gt;을 닫으며"
+  title: "피해생존자들의 쉼터였던 <평화의 우리집>을 닫으며"
   created: "2020-11-02 21:36:14"
   updated: "2020-12-23 11:00:42"
   image: "https://r2.womenandwar.net/kboard_attached/1/202011/5f9ffd3246c513408709.jpg"
