--- a/content/connect/notice/1269.md
+++ b/content/connect/notice/1269.md
@@ -2,7 +2,7 @@
   id: 1269
   uid: 2
   author_name: "정의기억연대"
-  title: "3차 국제심포지엄 &lt;일본국 상대 일본군‘위안부’ 손해배상청구 역사적 승소: 정의와 진실에 대한 권리회복&gt;"
+  title: "3차 국제심포지엄 <일본국 상대 일본군‘위안부’ 손해배상청구 역사적 승소: 정의와 진실에 대한 권리회복>"
   created: "2021-02-19 17:26:24"
   updated: "2021-03-19 17:47:36"
   image: "https://r2.womenandwar.net/kboard_attached/1/202102/602f75f8e968a4145673.png"
