--- a/content/connect/notice/1393.md
+++ b/content/connect/notice/1393.md
@@ -2,7 +2,7 @@
   id: 1393
   uid: 2
   author_name: "정의기억연대"
-  title: "1500차 수요시위 기념 에세이 공모전 &lt;나와 수요시위&gt; 선정 결과 안내"
+  title: "1500차 수요시위 기념 에세이 공모전 <나와 수요시위> 선정 결과 안내"
   created: "2021-07-13 21:07:24"
   updated: "2021-07-20 13:41:14"
 ---
