--- a/content/connect/notice/1453.md
+++ b/content/connect/notice/1453.md
@@ -2,7 +2,7 @@
   id: 1453
   uid: 2
   author_name: "정의기억연대"
-  title: "[~10/25] 2021년 정의기억연대 &lt;김복동 평화인권상&gt; 공모"
+  title: "[~10/25] 2021년 정의기억연대 <김복동 평화인권상> 공모"
   created: "2021-10-07 20:54:10"
   updated: "2021-11-08 14:33:56"
   image: "https://r2.womenandwar.net/kboard_attached/1/202110/615ff9662b2478916320.png"
