--- a/content/connect/notice/1694.md
+++ b/content/connect/notice/1694.md
@@ -2,7 +2,7 @@
   id: 1694
   uid: 2
   author_name: "정의기억연대"
-  title: "&lt;김복동 평화인권상&gt; 수상자 발표"
+  title: "<김복동 평화인권상> 수상자 발표"
   created: "2022-11-14 09:24:36"
   updated: "2022-11-14 09:24:53"
 ---
