--- a/content/connect/notice/512.md
+++ b/content/connect/notice/512.md
@@ -2,7 +2,7 @@
   id: 512
   uid: 2
   author_name: "정의기억연대"
-  title: "알림] &lt;문희상 국회의장실 항의방문&gt;"
+  title: "알림] <문희상 국회의장실 항의방문>"
   created: "2019-11-21 11:23:03"
   updated: "2020-01-28 13:16:57"
 ---
