--- a/content/connect/notice/609.md
+++ b/content/connect/notice/609.md
@@ -2,7 +2,7 @@
   id: 609
   uid: 2
   author_name: "정의기억연대"
-  title: "&lt;일본군성노예제 문제해결을 위한 1428차 수요시위 공지&gt;"
+  title: "<일본군성노예제 문제해결을 위한 1428차 수요시위 공지>"
   created: "2020-02-21 11:53:08"
   updated: "2020-03-03 09:57:55"
   image: "https://r2.womenandwar.net/kboard_attached/1/202002/5e4f45f09a4bc5687706.jpg"
