--- a/content/connect/notice/621.md
+++ b/content/connect/notice/621.md
@@ -2,7 +2,7 @@
   id: 621
   uid: 2
   author_name: "정의기억연대"
-  title: "&lt;1429차 일본군성노예제 문제해결을 위한 정기 수요시위 참여 안내&gt;"
+  title: "<1429차 일본군성노예제 문제해결을 위한 정기 수요시위 참여 안내>"
   created: "2020-02-27 14:50:28"
   updated: "2020-03-09 18:37:13"
   image: "https://r2.womenandwar.net/kboard_attached/1/202002/5e57589433ae51755241.jpg"
