--- a/content/connect/press-release/1290.md
+++ b/content/connect/press-release/1290.md
@@ -2,7 +2,7 @@
   id: 1290
   uid: 2
   author_name: "정의기억연대"
-  title: "[보도자료] 정의기억연대, 12일 긴급토론회 &lt;램지어 교수 ‘사태’를 통해 본 아카데미 역사부정론&gt; 개최"
+  title: "[보도자료] 정의기억연대, 12일 긴급토론회 <램지어 교수 ‘사태’를 통해 본 아카데미 역사부정론> 개최"
   created: "2021-03-09 14:52:59"
   updated: "2021-03-09 14:57:35"
   image: "https://r2.womenandwar.net/kboard_attached/1/202103/60470e3e0c5e58495420.jpg"
