--- a/content/connect/press-release/408.md
+++ b/content/connect/press-release/408.md
@@ -2,7 +2,7 @@
   id: 408
   uid: 2
   author_name: "정의기억연대"
-  title: "영화 &lt;김복동&gt; 8월 8일 전국 317개 상영관 개봉확정!"
+  title: "영화 <김복동> 8월 8일 전국 317개 상영관 개봉확정!"
   created: "2019-08-07 19:24:33"
   updated: "2020-01-28 16:09:42"
   image: "https://r2.womenandwar.net/kboard_attached/1/201908/5d4aa6a5409323371276.jpg"
