--- a/content/actions/post/2023-01-25-1580차-수요시위-평화나비-네트워크.md
+++ b/content/actions/post/2023-01-25-1580차-수요시위-평화나비-네트워크.md
@@ -1,9 +1,11 @@
 ---
-title: "1580차 수요시위 - 평화나비 네트워크"
-date: "2023-01-25"
-categories: 
-  - "this-week"
-  - "report"
+title: 1580차 수요시위 - 평화나비 네트워크
+author: 정의기억연대
+date: 2023-01-25
+image: https://womenandwar.net/kr/wp-content/uploads/2023/01/IMG_8608-1024x683.jpg
+categories:
+  - this-week
+  - report
 ---
 
 1580차 일본군성노예제 문제해결을 위한 수요시위는 평화나비 네트워크 주관으로 진행되었습니다. 사회는 평화나비 네트워크 중앙집행부 연대사업국장 이담비 님이 보았습니다.
