--- a/content/actions/post/2023-01-18-1579차-수요시위-진보대학생넷.md
+++ b/content/actions/post/2023-01-18-1579차-수요시위-진보대학생넷.md
@@ -1,9 +1,11 @@
 ---
-title: "1579차 수요시위 - 진보대학생넷"
-date: "2023-01-18"
-categories: 
-  - "this-week"
-  - "report"
+title: 1579차 수요시위 - 진보대학생넷
+author: 정의기억연대
+date: 2023-01-18
+image: https://womenandwar.net/kr/wp-content/uploads/2023/01/IMG_8062-1024x683.jpg
+categories:
+  - this-week
+  - report
 ---
 
 1579차 일본군성노예제 문제해결을 위한 수요시위는 진보대학생넷 주관으로 진행되었습니다. 사회는 이영헌 진보대학생넷 서울인천지부 대표님이 보았습니다.
