--- a/content/actions/post/2023-01-11-1578차-수요시위-정의기억연대.md
+++ b/content/actions/post/2023-01-11-1578차-수요시위-정의기억연대.md
@@ -1,9 +1,11 @@
 ---
-title: "1578차 수요시위 - 정의기억연대"
-date: "2023-01-11"
-categories: 
-  - "this-week"
-  - "report"
+title: 1578차 수요시위 - 정의기억연대
+author: 정의기억연대
+date: 2023-01-11
+image: https://womenandwar.net/kr/wp-content/uploads/2023/01/IMG_7634-1024x683.jpg
+categories:
+  - this-week
+  - report
 ---
 
 1578차 일본군성노예제 문제해결을 위한 수요시위는 정의기억연대 주최, 주관으로 진행되었습니다. 사회는 정의기억연대 한경희 사무총장이 보았습니다.
