Update 활동(post) “2023-01-04-1577차-수요시위-수요시위-31주년정의연”

--- a/content/actions/post/2023-01-04-1577차-수요시위-수요시위-31주년정의연.md
+++ b/content/actions/post/2023-01-04-1577차-수요시위-수요시위-31주년정의연.md
@@ -1,9 +1,11 @@
 ---
-title: "1577차 수요시위 - 수요시위 31주년(정의연)"
-date: "2023-01-04"
-categories: 
-  - "this-week"
-  - "report"
+title: 1577차 수요시위 - 수요시위 31주년(정의연)
+author: 정의기억연대
+date: 2023-01-04
+image: https://womenandwar.net/kr/wp-content/uploads/2023/01/크기변환1IMG_7589.jpg
+categories:
+  - this-week
+  - report
 ---
 
 2023년 첫 수요시위인 1577차 일본군성노예제 문제해결을 위한 수요시위는 수요시위 31주년 기념으로 진행되었으며 정의기억연대에서 주최, 주관하였습니다. 사회는 정의기억연대 강혜정 이사가 보았습니다.
