--- a/content/issues/새로운-섹션을-올려봅니다-현안.md
+++ b/content/issues/새로운-섹션을-올려봅니다-현안.md
@@ -5,5 +5,5 @@ date: 2023-02-21T09:06:17.582Z
 image: /img/정의연-슬라이드-후원의밤.png
 button_name: 알아봅시다.
 button_url: /
-home_sticky: false
+home_sticky: true
 ---
