--- a/content/issues/1.md
+++ b/content/issues/1.md
@@ -1,6 +1,6 @@
 ---
 weight: "1"
-title: 일본군성노예제 문제해결운동 32주년 기념 '2022 정의기억연대 후원의 밤'이 진행(1)
+title: 일본군성노예제 문제해결운동 32주년 기념 '2022 정의기억연대 후원의 밤'이 진행
 date: 2022-03-10T02:52:56.532Z
 image: https://media.womenandwar.net/web/img/후원의밤.jpg
 button_name: 더 알아보기
