테마 업데이트 및 categories term 목록 화면을 액션.캠페인 화면으로 사용합니다.

--- a/content/connect/notice/1694.md
+++ b/content/connect/notice/1694.md
@@ -5,6 +5,8 @@
   title: "<김복동 평화인권상> 수상자 발표"
   created: "2022-11-14 09:24:36"
   updated: "2022-11-14 09:24:53"
+  home_sticky: true
+  pinned: false
 ---
 (재)일본군성노예제 문제해결을 위한 정의기억연대는 일본군성노예제 피해자로 전시 성폭력 근절과 여성인권·평화를 위해 용기 있게 증언하고 활동한 여성인권 운동가 김복동의 뜻을 기려 일본군성노예제 문제해결 및 여성인권과 평화를 위해 노력해 온 국내외 활동가들과 관련 문제에 관심을 갖고 활동해 온 미래세대를 발굴하고 응원하고자 <김복동 평화인권상>을 제정했습니다. 심사위원회의 엄중한 심사절차를 거쳐 <제1회 김복동 평화인권상> 수상자를 아래와 같이 선정하게 되었음을 알립니다.
 
