edit contents for sticky layouts

--- a/content/actions/post/2023-02-14-경기도-할머니-방문기-어쩐지-누가-날-부르더라.md
+++ b/content/actions/post/2023-02-14-경기도-할머니-방문기-어쩐지-누가-날-부르더라.md
@@ -1,9 +1,13 @@
 ---
 title: "경기도 할머니 방문기 : “어쩐지. 누가 날 부르더라~”"
 date: "2023-02-14"
+images:
+  - https://womenandwar.net/kr/wp-content/uploads/2023/02/2-edited.jpg
 categories: 
   - "생존자복지"
   - "report"
+home_sticky: true
+pinned: true    
 ---
 
 오랜만에 경기도에 사시는 할머니께 방문하는 날입니다. 저 더피 활동가와 포카 활동가는 할머니의 집으로 향했습니다. 마침 날씨도 딱 좋아서 오랜만에 아주 들뜨고 설렜습니다.
