--- a/content/actions/post/2023-02-15-1583차-수요시위-전국민주노동조합총연맹-통일위원회.md
+++ b/content/actions/post/2023-02-15-1583차-수요시위-전국민주노동조합총연맹-통일위원회.md
@@ -2,10 +2,13 @@
 title: 1583차 수요시위 - 전국민주노동조합총연맹 통일위원회
 author: 정의기억연대
 date: 2023-02-15
-image: https://womenandwar.net/kr/wp-content/uploads/2023/02/크기변환1IMG_9191.jpg
 categories:
   - this-week
   - report
+images:
+  - https://womenandwar.net/kr/wp-content/uploads/2023/02/크기변환1IMG_9191.jpg
+home_sticky: true
+pinned: true  
 ---
 
 1583차 일본군성노예제 문제해결을 위한 수요시위는 전국민주노동조합총연맹 통일위원회 주관으로 진행되었습니다. 사회는 민주노총 대협실장 안혜영 님이 보았습니다.
