--- a/content/actions/post/2023-02-15-양금덕-할머니와-함께-싸우겠습니다-1인-시위-참여.md
+++ b/content/actions/post/2023-02-15-양금덕-할머니와-함께-싸우겠습니다-1인-시위-참여.md
@@ -4,6 +4,10 @@ date: "2023-02-15"
 categories: 
   - "연대사업"
   - "report"
+images:
+  - https://womenandwar.net/kr/wp-content/uploads/2023/02/photo_2023-02-15_11-13-33-768x1024.jpg
+home_sticky: true
+pinned: true  
 ---
 
 "나는 일본에서 사죄받기 전에 죽어도 죽지 못하겠습니다. 미쓰비시가 사죄하고 돈도 내놓으세요."  
