--- a/content/actions/post/2023-02-16-일제-강제동원-사죄-및-전범기업-직접배상-촉구-의원.md
+++ b/content/actions/post/2023-02-16-일제-강제동원-사죄-및-전범기업-직접배상-촉구-의원.md
@@ -4,6 +4,10 @@ date: "2023-02-16"
 categories: 
   - "연대사업"
   - "report"
+images: 
+  - "https://womenandwar.net/kr/wp-content/uploads/2023/02/photo_2023-02-16_10-26-45-1024x577.jpg"
+home_sticky: true
+pinned: true  
 ---
 
 정의기억연대는 여러 단체들과 함께 한일역사정의평화행동으로 활동하고 있습니다.
