--- a/content/connect/notice/1676.md
+++ b/content/connect/notice/1676.md
@@ -6,9 +6,10 @@
   created: "2022-10-27 10:36:17"
   updated: "2022-10-27 10:36:58"
   pinned: "true"
+  home_sticky: true
   image: "https://r2.womenandwar.net/kboard_thumbnails/1/202210/6359e091bb8257820905.jpg"
 ---
-[![](https://womenandwar.nethttps://r2.womenandwar.net/2022/10/6943_1666681058.jpg)](https://womenandwar.nethttps://r2.womenandwar.net/2022/10/6943_1666681058.jpg)
+[![](https://r2.womenandwar.net/2022/10/6943_1666681058.jpg)](https://r2.womenandwar.net/2022/10/6943_1666681058.jpg)
 
 2022 정의기억연대 후원의 밤에 초대합니다.
 =========================
