--- a/content/connect/notice/1679.md
+++ b/content/connect/notice/1679.md
@@ -6,6 +6,7 @@
   created: "2022-10-30 22:01:19"
   updated: "2022-10-30 22:01:19"
   image: "https://r2.womenandwar.net/kboard_attached/1/202210/635e7576aa2656255810.jpeg"
+  home_sticky: true
 ---
 **이태원 참사 희생자에게 깊은 애도를 표합니다**
 
