--- a/content/connect/press-release/1695.md
+++ b/content/connect/press-release/1695.md
@@ -6,6 +6,7 @@
   created: "2022-11-14 18:32:55"
   updated: "2022-11-14 21:02:42"
   pinned: "true"
+  home_sticky: true
   image: "https://r2.womenandwar.net/kboard_attached/1/202211/63720abf6d56a7667999.jpg"
   attachments: 
     - 
