--- a/content/connect/press-release/1696.md
+++ b/content/connect/press-release/1696.md
@@ -6,6 +6,7 @@
   created: "2022-11-16 14:19:01"
   updated: "2022-11-16 14:19:53"
   pinned: "true"
+  home_sticky: true
   image: "https://r2.womenandwar.net/kboard_attached/1/202211/6374729c5f2023774789.jpg"
 ---
 ![](https://r2.womenandwar.net/kboard_attached/1/202211/6374729c5f2023774789.jpg)
