--- a/content/connect/press-release/1699.md
+++ b/content/connect/press-release/1699.md
@@ -6,6 +6,7 @@
   created: "2022-11-17 19:20:20"
   updated: "2022-11-17 19:21:18"
   pinned: "true"
+  home_sticky: true
   image: "https://r2.womenandwar.net/kboard_attached/1/202211/63760a87844b03174760.jpg"
 ---
 ![](https://r2.womenandwar.net/kboard_attached/1/202211/63760a87844b03174760.jpg)
